--- a/index.html
+++ b/index.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
-
 <html>
+<head>
+	<title>TeaCozy</title>
+</head>
 
 <body>
 
+	<header>
+		<div class="nav">
+			<ul>
+				<li>Mission</li>
+				<li>Featured Tea</li>
+				<li>Locations</li>
+			</ul>
+		</div>
+	</header>
 
-	<h1>Works!</h1>
+	<main>
+		<div class="top">
+			<img class="mission" src="./images/img-mission-background.webp">
+			<h2>Our Mission</h2>
+			<h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+		</div>
+
+		<div class="totm">
+			<h2>Tea of the Month</h2>
+			<h3>What's Steeping at The Tea Cozy?</h3>
+
+			<img class="img1" src="img-berryblitz.webp">
+			<h3 class="desc1">Fall Berry Blitz Tea</h3>
+
+			<img class="img2" src="img-spiced-rum.webp">
+			<h3 class="desc2">Spiced Rum Tea</h3>
+
+			<img class="img3" src="img-donut.webp">
+			<h3 class="desc3">Seasonal Donuts</h3>
+
+			<img src="img-myrtle-ave.webp">
+			<h3 class="desc4">Myrtle Ave Tea</h3>
+
+			<img src="img-bedford-bizarre.webp">
+			<h3 class="desc5">Bedford Bizarre Tea</h3>
+		</div>
+
+		<div class="locations">
+			<div class="location1">
+				<h3>Downtown</h3>
+				<p>384 West 4th St</p>
+				<p>Suite 108</p>
+				<p>Portland, Maine</p>
+			</div>
+
+			<div class="location2">
+				<h3>East Bayside</h3>
+				<p>3433 Phisherman's Avenue</p>
+				<p>(Northwest Corner)</p>
+				<p>Portland, Maine</p>
+			</div>
+
+			<div class="location3">
+				<h3>Oakdale</h3>
+				<p>515 Crescent Avenue</p>
+				<p>Second Floor</p>
+				<p>Portland, Maine</p>
+			</div>
+		</div>
+
+
+	</main>
+
+	<footer>
+		<div class="contact">
+			<h1>The Tea Cozy</h1>
+			<h5>contact@theteacozy.com</h5>
+			<h5>917-555-8904</h5>
+			<p>copywright The Tea Cozy 2017 (Made by Teodor Mihalcea)</p>
+		</div>
+
+	</footer>
+
 
 
 </body>
