--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 			<h2>Tea of the Month</h2>
 			<h3>What's Steeping at The Tea Cozy?</h3>
 
-			<img class="img1" src="img-berryblitz.webp">
+			<img class="img1" src="./images/img-berryblitz.webp">
 			<h3 class="desc1">Fall Berry Blitz Tea</h3>
 
-			<img class="img2" src="img-spiced-rum.webp">
+			<img class="img2" src="./images/img-spiced-rum.webp">
 			<h3 class="desc2">Spiced Rum Tea</h3>
 
-			<img class="img3" src="img-donut.webp">
+			<img class="img3" src="./images/img-donut.webp">
 			<h3 class="desc3">Seasonal Donuts</h3>
 
-			<img src="img-myrtle-ave.webp">
+			<img src="./images/img-myrtle-ave.webp">
 			<h3 class="desc4">Myrtle Ave Tea</h3>
 
-			<img src="img-bedford-bizarre.webp">
+			<img src="./images/img-bedford-bizarre.webp">
 			<h3 class="desc5">Bedford Bizarre Tea</h3>
 		</div>
 
