--- a/index.html
+++ b/index.html
@@ -2,29 +2,32 @@
 <html>
 <head>
 	<title>TeaCozy</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
 
 	<header>
+		<div class="logo">
+			<img src="./images/img-tea-cozy-logo.webp">
+		</div>
 		<div class="nav">
 			<ul>
-				<li>Mission</li>
-				<li>Featured Tea</li>
-				<li>Locations</li>
+				<li> <a href="#mission">Mission</a></li>
+				<li> <a href="#featured">Featured Tea</a></li>
+				<li> <a href="#locations">Locations</a></li>
 			</ul>
 		</div>
 	</header>
 
 	<main>
-		<div class="top">
-			<img class="mission" src="./images/img-mission-background.webp">
+		<div id="#mission">
+			<img class="top" src="./images/img-mission-background.webp">
 			<h2>Our Mission</h2>
 			<h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
 		</div>
 
-		<div class="totm">
+		<div class="totm" id="#featured">
 			<h2>Tea of the Month</h2>
 			<h3>What's Steeping at The Tea Cozy?</h3>
 
@@ -44,7 +47,7 @@
 			<h3 class="desc5">Bedford Bizarre Tea</h3>
 		</div>
 
-		<div class="locations">
+		<div class="loc" id="#locations">
 			<div class="location1">
 				<h3>Downtown</h3>
 				<p>384 West 4th St</p>
